kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  labels:
    app.kubernetes.io/name: eks-gitops-demo-app
    app.kubernetes.io/managed-by: argocd
