kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-app
  labels:
    app.kubernetes.io/name: eks-gitops-demo-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: eks-gitops-demo-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
